# AIEcoinNix

./: .gitignore  ADAPTIVE_LOOP_PLAN.md  IMPLEMENTATION_SUMMARY.md  LUFFY_VS_RALPH_ANALYSIS.md  ORACLE_ANALYSIS_PLAN.md  README.md  SETUP.md  result  smartassist.nix
ai-services/: __init__.py  default.nix  main.py  pdf_extractor.py  pyproject.toml  rag_service.py  web_parser.py
opencode-integration/: README.md  UPDATE_ORACLE_PLAN.md  build.sh  opencode.json  package-lock.json  package.json
opencode-integration/agents/: builder-bob.md  builder.md  designer.md  fixer.md  librarian.md  nerdplanner.md  oracle.md  planner.md  researcher.md  search-helper.md
opencode-integration/tools/: lightpanda.ts  local-services-start.ts  local-services-status.ts  local-web.ts  loop-state.ts  luffy-loop.js  luffy-loop.ts  oracle-control.js  oracle-control.ts  pdf-extract.ts  rag-query.ts  yt-transcript.ts
opencode-integration/tools/lsp/: client.ts  code-actions.ts  completion.ts  diagnostics.ts  find-references.ts  goto-definition.ts  rename.ts
services/web-parser/: default.nix
