[project]
name = "ai-services"
version = "0.1.0"
description = "AI Services - Web Parser, PDF Extractor, RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "pymupdf>=1.23.0",
    "pdfplumber>=0.10.0",
]
# ragdb = ">=0.1.0"  # Not available in nixpkgs, comment out for now

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
